<resources>
    <string name="app_name">TuCiudad</string>
    <string name="cali">Cali</string>
    <string name="informaciom">Ciudad: Cali</string>
    <string name="informacion_cali">"Cali es una ciudad colombiana ubicada en el departamento del Valle del Cauca, al suroeste de Bogotá. Es conocida por el baile de la salsa, del que hay muchos clubes en el suburbio de Juanchito. Algunos sitios turísticos de Cali son: Cristo Rey, Zoológico de Cali, Museo la tertulia, Iglesia la Ermita, Iglesia San Antonio. Superficie: 564 km² Elevación: 1.018 m Fundación: 25 de julio de 1536 Alcalde: Jorge Iván Ospina Población: 2,228 millones (2018) Tiempo: 26 °C, viento del O a 13 km/h, humedad del 68 % "</string>
    <string name="registro">Registro de la ciudad</string>
    <string name="registrar">Registrar</string>
    <string name="nombre">Nombre Ciudad</string>
    <string name="calificacion">Calificación</string>
    <string name="nombre_info">\"Nombre: %s, Puntuación: %f"</string>
    <string name="iglesia_san_antonio_text_view">Capilla San Antonio</string>
    <string name="descripcion_sitio_text_view">Tipo barroco, se encuentra ubicada en la Colina de San Antonio en Santiago de Cali, Colombia</string>
    <string name="puntuacion_text_view">Puntuación: 4.0</string>
    <string name="puntaje">Puntaje</string>
    <string name="score_text">4.2</string>
</resources>